cluster/apps/home/frigate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app frigate
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: traefik
  rules:
    - host: &host "frigate.${SECRET_DOMAIN_CASA}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
